--- a/gamjam-folkgame/export_presets.cfg
+++ b/gamjam-folkgame/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="NamelessForestAdventure"
+name="Nimetu"
 platform="Windows Desktop"
 runnable=true
 advanced_options=true
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Export/1.1Windows/Version1.1.exe"
+export_path="../../Export/1.2.Windows/Version1.2.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
